updated the skills section

--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         >
           Projects
         </h4>
+        <!--make it responsive-->
         <div class="row">
           <div class="col-md-4">
             <h2 class="sub-title mb-4 mb-5">React Dictionary</h2>
@@ -110,88 +111,95 @@
               <i class="bi bi-github"></i>
             </a>
           </div>
-          <div class="col-md-8">
+          <div class="col-md-8 d-none-sm-mt-4 d-none-sm-mb-5">
             <img src="images/react-dictionary.png" />
           </div>
         </div>
       </div>
     </div>
-    <div class="container">
-      <div class="skills-section">
-        <h2 class="text-center display-6">Skills & Softwares</h2>
-        <h6 class="text-center">
-          Technical skills, languages and softwares I use.
-        </h6>
-      </div>
+    <div class="container py-5">
       <div class="row">
-        <div class="col-sm-3 skill-visual">
-          <img
-            class="image-fluid shadow"
-            src="images/logos/logo-softwares-html.png"
-          />
+        <div class="col-md-4">
+          <div class="skills-section">
+            <h2 class="text-center display-6">Skills & Softwares</h2>
+            <h6 class="text-center">
+              Technical skills, languages and softwares I use.
+            </h6>
+          </div>
         </div>
-        <div class="col-sm-3 skill-visual">
-          <img
-            class="image-fluid shadow"
-            src="images/logos/logo-softwares-css.png"
-          />
-        </div>
-        <div class="col-sm-3 skill-visual">
-          <img
-            class="image-fluid shadow"
-            src="images/logos/logo-softwares-js.png"
-          />
-        </div>
-        <div class="col-sm-3 skill-visual">
-          <img
-            class="image-fluid shadow"
-            src="images/logos/logo-softwares-vsCode.png"
-          />
-        </div>
-        <div class="col-sm-3 skill-visual">
-          <img
-            class="image-fluid shadow"
-            src="images/logos/logo-softwares-api.png"
-          />
-        </div>
-        <div class="col-sm-3 skill-visual">
-          <img class="image-fluid shadow" src="images/logos/gitHub.png" />
-        </div>
-        <div class="col-sm-3 skill-visual">
-          <img
-            class="image-fluid shadow"
-            src="images/logos/logo-softwares-bootstrap.png"
-          />
-        </div>
-        <div class="col-sm-3 skill-visual">
-          <img
-            class="image-fluid shadow"
-            src="images/logos/logo-softwares-hosting.png"
-          />
-        </div>
-        <div class="col-sm-3 skill-visual">
-          <img
-            class="image-fluid shadow"
-            src="images/logos/logo-softwares-flexbox.png"
-          />
-        </div>
-        <div class="col-sm-3 skill-visual">
-          <img
-            class="image-fluid shadow"
-            src="images/logos/logo-softwares-seo.png"
-          />
-        </div>
-        <div class="col-sm-3 skill-visual">
-          <img
-            class="shadow"
-            src="images/logos/logo-softwares-responisive.png"
-          />
-        </div>
-        <div class="col-sm-3 skill-visual">
-          <img class="shadow" src="images/logos/logo-softwares-react.png" />
+        <div class="col-md-8">
+          <div class="row">
+            <div class="col-sm-3 skill-visual">
+              <img
+                class="image-fluid shadow"
+                src="images/logos/logo-softwares-html.png"
+              />
+            </div>
+            <div class="col-sm-3 skill-visual">
+              <img
+                class="image-fluid shadow"
+                src="images/logos/logo-softwares-css.png"
+              />
+            </div>
+            <div class="col-sm-3 skill-visual">
+              <img
+                class="image-fluid shadow"
+                src="images/logos/logo-softwares-js.png"
+              />
+            </div>
+            <div class="col-sm-3 skill-visual">
+              <img
+                class="image-fluid shadow"
+                src="images/logos/logo-softwares-vsCode.png"
+              />
+            </div>
+            <div class="col-sm-3 skill-visual">
+              <img
+                class="image-fluid shadow"
+                src="images/logos/logo-softwares-api.png"
+              />
+            </div>
+            <div class="col-sm-3 skill-visual">
+              <img class="image-fluid shadow" src="images/logos/gitHub.png" />
+            </div>
+            <div class="col-sm-3 skill-visual">
+              <img
+                class="image-fluid shadow"
+                src="images/logos/logo-softwares-bootstrap.png"
+              />
+            </div>
+            <div class="col-sm-3 skill-visual">
+              <img
+                class="image-fluid shadow"
+                src="images/logos/logo-softwares-hosting.png"
+              />
+            </div>
+            <div class="col-sm-3 skill-visual">
+              <img
+                class="image-fluid shadow"
+                src="images/logos/logo-softwares-flexbox.png"
+              />
+            </div>
+            <div class="col-sm-3 skill-visual">
+              <img
+                class="image-fluid shadow"
+                src="images/logos/logo-softwares-seo.png"
+              />
+            </div>
+            <div class="col-sm-3 skill-visual">
+              <img
+                class="shadow"
+                src="images/logos/logo-softwares-responisive.png"
+              />
+            </div>
+            <div class="col-sm-3 skill-visual">
+              <img class="shadow" src="images/logos/logo-softwares-react.png" />
+            </div>
+          </div>
         </div>
       </div>
     </div>
+    <!--footer-->
     <footer>
       <div class="bg">
         <div class="container">
