Improved the the footer

--- a/about.html
+++ b/about.html
@@ -109,26 +109,27 @@
           <div class="row">
             <div class="col-md-6 footer-left">
               <a href="#" class="logo" title="logo">Mthabiseni.Tsabedze </a>
-
-              <p class="pt-5">
-                This code is
-                <a
-                  href="https://github.com/MthabiKT/portfolio-project"
-                  target="_blank"
-                  title="GitHub repository of this project"
-                  class="fs-6 text"
-                >
-                  open-sourced</a
-                >
-              </p>
-              <p>© MthabiseniTsabedze 2022</p>
+              <div class="source-code d-none d-sm-block">
+                <p class="pt-5">
+                  This code is
+                  <a
+                    href="https://github.com/MthabiKT/portfolio-project"
+                    target="_blank"
+                    title="GitHub repository of this project"
+                    class="fs-6 text"
+                  >
+                    open-sourced</a
+                  >
+                </p>
+                <p>© MthabiseniTsabedze 2022</p>
+              </div>
             </div>
             <div class="col-md-6 footer-right">
               <div class="row justify-content-evenly">
                 <div class="col-md-2">
                   <ul class="nav-links list-unstyled">
                     <li>
-                      <a href="/" class="nav-link" title="homepage">Home</a>
+                      <a href="#" class="nav-link" title="homepage">Home</a>
                     </li>
                     <li>
                       <a href="#works" class="nav-link" title="Works section"
@@ -162,7 +163,7 @@
                             <a
                               href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
                               target="_blank"
-                              title="Viktoriia's Linkedin"
+                              title="Mthabi's Linkedin"
                               ><i class="bi bi-linkedin p-3"></i>
                             </a>
                           </li>
@@ -170,7 +171,7 @@
                             <a
                               href="https://www.instagram.com/kxren_t/"
                               target="_blank"
-                              title="Viktoriia's Instagram"
+                              title="Mthabi's Instagram"
                               ><i class="bi bi-instagram p-3"></i>
                             </a>
                           </li>
@@ -178,7 +179,7 @@
                             <a
                               href="https://github.com/MthabiKT"
                               target="_blank"
-                              title="Viktoriia's GitHub"
+                              title="Mthabi's GitHub"
                               ><i class="bi bi-github p-3"></i>
                             </a>
                           </li>
@@ -187,6 +188,20 @@
                     </div>
                   </div>
                 </div>
+              </div>
+              <div class="source-code d-block d-sm-none">
+                <p class="pt-5">
+                  This code is
+                  <a
+                    href="https://github.com/MthabiKT/portfolio-project"
+                    target="_blank"
+                    title="GitHub repository of this project"
+                    class="fs-6 text"
+                  >
+                    open-sourced</a
+                  >
+                </p>
+                <p>© MthabiseniTsabedze 2022</p>
               </div>
             </div>
           </div>
