--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
         </h4>
         <!--make it responsive-->
         <div class="row">
-          <div class="col-md-4">
-            <h2 class="sub-title mb-4 mb-5">React Dictionary</h2>
+          <div class="col-md-6 text-center">
+            <h2 class="sub-title mb-4 my-5">React Dictionary</h2>
             <p>
               My most recent project I worked on. A dictionary made with react
               with multiple components and an API integration to help user
@@ -111,8 +111,8 @@
               <i class="bi bi-github"></i>
             </a>
           </div>
-          <div class="col-md-8 d-none-sm-mt-4 d-none-sm-mb-5">
-            <img src="images/react-dictionary.png" />
+          <div class="col-md-6 d-none-sm-mt-4 d-none-sm-mb-5">
+            <img src="images/react-dictionary.png" class="img-fluid" />
           </div>
         </div>
       </div>
@@ -125,75 +125,106 @@
             <h6 class="text-center">
               Technical skills, languages and softwares I use.
             </h6>
+            <div class="container text-center pt-4">
+              <span class="d-block d-sm-none"> HTML </span>
+
+              <span class="d-block d-sm-none"> CSS </span>
+
+              <span class="d-block d-sm-none"> JavaScript </span>
+
+              <span class="d-block d-sm-none"> Editor </span>
+
+              <span class="d-block d-sm-none"> API </span>
+
+              <span class="d-block d-sm-none"> GitHub </span>
+
+              <span class="d-block d-sm-none"> Bootstrap </span>
+
+              <span class="d-block d-sm-none"> Hosting </span>
+
+              <span class="d-block d-sm-none"> Flexbox </span>
+
+              <span class="d-block d-sm-none"> SEO </span>
+
+              <span class="d-block d-sm-none"> Responsive </span>
+
+              <span class="d-block d-sm-none"> React </span>
+            </div>
           </div>
         </div>
-        <div class="col-md-8">
+        <div class="col-md-8 d-none d-sm-block">
           <div class="row">
-            <div class="col-sm-3 skill-visual">
+            <div class="col-md-3 skill-visual">
               <img
-                class="image-fluid shadow"
+                class="image-fluid shadow d-none d-sm-block"
                 src="images/logos/logo-softwares-html.png"
               />
             </div>
-            <div class="col-sm-3 skill-visual">
+            <div class="col-md-3 skill-visual">
               <img
-                class="image-fluid shadow"
+                class="image-fluid shadow d-none d-sm-block"
                 src="images/logos/logo-softwares-css.png"
               />
             </div>
-            <div class="col-sm-3 skill-visual">
+            <div class="col-md-3 skill-visual">
               <img
-                class="image-fluid shadow"
+                class="image-fluid shadow d-none d-sm-block"
                 src="images/logos/logo-softwares-js.png"
               />
             </div>
-            <div class="col-sm-3 skill-visual">
+            <div class="col-md-3 skill-visual">
               <img
-                class="image-fluid shadow"
+                class="image-fluid shadow d-none d-sm-block"
                 src="images/logos/logo-softwares-vsCode.png"
               />
             </div>
-            <div class="col-sm-3 skill-visual">
+            <div class="col-md-3 skill-visual">
               <img
-                class="image-fluid shadow"
+                class="image-fluid shadow d-none d-sm-block"
                 src="images/logos/logo-softwares-api.png"
               />
             </div>
-            <div class="col-sm-3 skill-visual">
-              <img class="image-fluid shadow" src="images/logos/gitHub.png" />
-            </div>
-            <div class="col-sm-3 skill-visual">
+            <div class="col-md-3 skill-visual">
               <img
-                class="image-fluid shadow"
+                class="image-fluid shadow d-none d-sm-block"
+                src="images/logos/gitHub.png"
+              />
+            </div>
+            <div class="col-md-3 skill-visual">
+              <img
+                class="image-fluid shadow d-none d-sm-block"
                 src="images/logos/logo-softwares-bootstrap.png"
               />
             </div>
-            <div class="col-sm-3 skill-visual">
+            <div class="col-md-3 skill-visual">
               <img
-                class="image-fluid shadow"
+                class="image-fluid shadow d-none d-sm-block"
                 src="images/logos/logo-softwares-hosting.png"
               />
             </div>
-            <div class="col-sm-3 skill-visual">
+            <div class="col-md-3 skill-visual">
               <img
-                class="image-fluid shadow"
+                class="image-fluid shadow d-none d-sm-block"
                 src="images/logos/logo-softwares-flexbox.png"
               />
             </div>
-            <div class="col-sm-3 skill-visual">
+            <div class="col-md-3 skill-visual">
               <img
-                class="image-fluid shadow"
+                class="image-fluid shadow d-none d-sm-block"
                 src="images/logos/logo-softwares-seo.png"
               />
             </div>
-            <div class="col-sm-3 skill-visual">
+            <div class="col-md-3 skill-visual">
               <img
-                class="shadow"
+                class="img-fluid shadow d-none d-sm-block"
                 src="images/logos/logo-softwares-responisive.png"
               />
             </div>
-            <div class="col-sm-3 skill-visual">
-              <img class="shadow" src="images/logos/logo-softwares-react.png" />
+            <div class="col-md-3 skill-visual">
+              <img
+                class="img-fluid shadow d-none d-sm-block"
+                src="images/logos/logo-softwares-react.png"
+              />
             </div>
           </div>
         </div>
@@ -206,19 +237,20 @@
           <div class="row">
             <div class="col-md-6 footer-left">
               <a href="#" class="logo" title="logo">Mthabiseni.Tsabedze </a>
-
-              <p class="pt-5">
-                This code is
-                <a
-                  href="https://github.com/MthabiKT/portfolio-project"
-                  target="_blank"
-                  title="GitHub repository of this project"
-                  class="fs-6 text"
-                >
-                  open-sourced</a
-                >
-              </p>
-              <p>© MthabiseniTsabedze 2022</p>
+              <div class="source-code d-none d-sm-block">
+                <p class="pt-5">
+                  This code is
+                  <a
+                    href="https://github.com/MthabiKT/portfolio-project"
+                    target="_blank"
+                    title="GitHub repository of this project"
+                    class="fs-6 text"
+                  >
+                    open-sourced</a
+                  >
+                </p>
+                <p>© MthabiseniTsabedze 2022</p>
+              </div>
             </div>
             <div class="col-md-6 footer-right">
               <div class="row justify-content-evenly">
@@ -259,7 +291,7 @@
                             <a
                               href="https://www.linkedin.com/in/mthabiseni-tsabedze-a449b6225/"
                               target="_blank"
-                              title="Viktoriia's Linkedin"
+                              title="Mthabi's Linkedin"
                               ><i class="bi bi-linkedin p-3"></i>
                             </a>
                           </li>
@@ -267,7 +299,7 @@
                             <a
                               href="https://www.instagram.com/kxren_t/"
                               target="_blank"
-                              title="Viktoriia's Instagram"
+                              title="Mthabi's Instagram"
                               ><i class="bi bi-instagram p-3"></i>
                             </a>
                           </li>
@@ -275,7 +307,7 @@
                             <a
                               href="https://github.com/MthabiKT"
                               target="_blank"
-                              title="Viktoriia's GitHub"
+                              title="Mthabi's GitHub"
                               ><i class="bi bi-github p-3"></i>
                             </a>
                           </li>
@@ -284,6 +316,20 @@
                     </div>
                   </div>
                 </div>
+              </div>
+              <div class="source-code d-block d-sm-none">
+                <p class="pt-5">
+                  This code is
+                  <a
+                    href="https://github.com/MthabiKT/portfolio-project"
+                    target="_blank"
+                    title="GitHub repository of this project"
+                    class="fs-6 text"
+                  >
+                    open-sourced</a
+                  >
+                </p>
+                <p>© MthabiseniTsabedze 2022</p>
               </div>
             </div>
           </div>
