--- a/work.html
+++ b/work.html
@@ -74,101 +74,127 @@
     <h2 class="display-5 text-center mt-5 py-5">My Projects</h2>
     <div class="background-image">
       <div class="container p-3 mb-5 text-center">
-        <div class="row">
-          <div class="col-sm-6 mt-4 d-none-mb-5 py-4">
-            <div class="project-description">
-              <h2 class="sub-title mb-4 mb-5">React Dictionary</h2>
-              <p>
-                My most recent project I worked on. A dictionary made with react
-                with multiple components and an API integration to help user
-                search for any word
-              </p>
-              <a
-                href="https://vocal-starship-ad8530.netlify.app/"
-                target="_blank"
-                class="btn btn-branding-outline"
-                >Launch Project</a
-              >
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+          <div class="col">
+            <div class="card shadow">
+              <img
+                src="images/React dictionary.JPG"
+                alt="weather image"
+                class="img-fluid d-none d-sm-flex"
+              />
+              <div class="card-body">
+                <h2 class="sub-title mb-5">React Dictionary</h2>
+                <p>
+                  My most recent project I worked on. A dictionary made with
+                  react with multiple components and an API integration to help
+                  user search for any word
+                </p>
+                <a
+                  href="https://vocal-starship-ad8530.netlify.app/"
+                  target="_blank"
+                  class="btn btn-launch-outline"
+                  ><i class="bi bi-box-arrow-up-right"></i
+                ></a>
+                <a
+                  href="https://github.com/MthabiKT/dictionary-project"
+                  target="_blank"
+                  class="btn btn-launch-outline"
+                >
+                  <i class="bi bi-github"></i>
+                </a>
+              </div>
             </div>
           </div>
-          <div class="col-sm-6 d-none-sm-mt-4 d-sm-flex-mb-5 py-4">
-            <img
-              src="images/React dictionary.JPG"
-              alt="weather image"
-              class="img-fluid shadow mt-5 d-none d-sm-flex"
-            />
-          </div>
-          <div class="col-sm-6 mt-4 mb-5 py-4">
-            <div class="project-description">
-              <h2 class="sub-title mb-4">Vanilla-Weather-App</h2>
-              <p>
-                The weather app also provides atmospheric pressure, weather
-                conditions, relative humidity, unit conversion and wind speed
-                and, in addition to six days in future and hourly weather
-                forecast.
-              </p>
-              <a href=""><i class="fas fa-external-link"></i></a>
-              <a
-                href="https://tender-lewin-d1e81b.netlify.app/"
-                class="btn btn-branding-outline"
-                >Launch Project</a
-              >
+          <div class="col">
+            <div class="card shadow">
+              <img
+                src="images/Weather-app.png"
+                alt="weather image"
+                class="img-fluid d-none d-sm-flex"
+              />
+              <div class="card-body">
+                <h2 class="sub-title mb-5">Vanilla-Weather-App</h2>
+                <p>
+                  The weather app also provides atmospheric pressure, weather
+                  conditions, relative humidity, unit conversion and wind speed
+                  and, in addition to six days in future and hourly weather
+                  forecast.
+                </p>
+                <a
+                  href="https://vocal-starship-ad8530.netlify.app/"
+                  target="_blank"
+                  class="btn btn-launch-outline"
+                  ><i class="bi bi-box-arrow-up-right"></i
+                ></a>
+                <a
+                  href="https://github.com/MthabiKT/dictionary-project"
+                  target="_blank"
+                  class="btn btn-launch-outline"
+                >
+                  <i class="bi bi-github"></i>
+                </a>
+              </div>
             </div>
           </div>
-          <div class="col-sm-6 d-none-sm-mt-4 d-none-sm-mb-5 py-4">
-            <img
-              src="images/Weather-app.png"
-              alt="weather image"
-              class="img-fluid shadow mt-5 d-none d-sm-flex"
-            />
-          </div>
-          <div class="col-sm-6 mt-4 d-none-mb-5 py-4">
-            <div class="project-description">
-              <h2 class="sub-title mb-4 mb-5">Weather App</h2>
-              <p>
-                The weather app also provides atmospheric pressure, weather
-                conditions, visibility distance, relative humidity,
-                precipitation in different unites, dew point, wind speed and
-                direction, in addition to ten days in future and hourly weather
-                forecast.
-              </p>
-              <a
-                href="https://nifty-volhard-4afc0a.netlify.app"
-                class="btn btn-branding-outline"
-                >Launch Project</a
-              >
+          <div class="col">
+            <div class="card shadow">
+              <img
+                src="images/weather.PNG"
+                alt="weather image"
+                class="img-fluid d-none d-sm-flex"
+              />
+              <div class="card-body">
+                <h2 class="sub-title mb-5">Weather App</h2>
+                <p>
+                  The weather app also provides atmospheric pressure, weather
+                  conditions, relative humidity, dew point, wind speed, in
+                  addition to six days in future and hourly weather forecast.
+                </p>
+                <a
+                  href="https://vocal-starship-ad8530.netlify.app/"
+                  target="_blank"
+                  class="btn btn-launch-outline"
+                  ><i class="bi bi-box-arrow-up-right"></i
+                ></a>
+                <a
+                  href="https://github.com/MthabiKT/dictionary-project"
+                  target="_blank"
+                  class="btn btn-launch-outline"
+                >
+                  <i class="bi bi-github"></i>
+                </a>
+              </div>
             </div>
           </div>
-          <div class="col-sm-6 d-none-sm-mt-4 d-sm-flex-mb-5 py-4">
-            <img
-              src="images/weather.PNG"
-              alt="weather image"
-              class="img-fluid shadow mt-5 d-none d-sm-flex"
-            />
-          </div>
-
-          <div class="col-sm-6 mt-4 mb-5 py-4">
-            <div class="project-description">
-              <h2 class="sub-title mb-4">Coffee Shop</h2>
-              <p class="">
-                My first project built with HTML, CSS and JavaScript. I enrolled
-                coding classes from SheCodes Here is where my coding journey
-                began.
-              </p>
-              <a
-                href="https://www.shecodes.io/workshops/shecodes-basics-74375ca9-1279-458f-adfd-c7e6be345617/projects/570354"
-                target="_blank"
-                class="btn btn-branding-outline"
-                >Launch Project</a
-              >
+          <div class="col">
+            <div class="card shadow">
+              <img
+                src="images/Coffee Shop.JPG"
+                alt="weather image"
+                class="img-fluid d-none d-sm-flex"
+              />
+              <div class="card-body">
+                <h2 class="sub-title mb-5">Coffee Shop</h2>
+                <p class="">
+                  My first project built with HTML, CSS and JavaScript. I
+                  enrolled coding classes from SheCodes Here is where my coding
+                  journey began.
+                </p>
+                <a
+                  href="https://vocal-starship-ad8530.netlify.app/"
+                  target="_blank"
+                  class="btn btn-launch-outline"
+                  ><i class="bi bi-box-arrow-up-right"></i
+                ></a>
+                <a
+                  href="https://github.com/MthabiKT/dictionary-project"
+                  target="_blank"
+                  class="btn btn-launch-outline"
+                >
+                  <i class="bi bi-github"></i>
+                </a>
+              </div>
             </div>
-          </div>
-          <div class="col-sm-6 mt-4 mb-5 py-4">
-            <img
-              src="images/Coffee Shop.JPG"
-              alt="weather image"
-              class="img-fluid mt-5 shadow d-none d-sm-flex"
-            />
           </div>
         </div>
       </div>
