--- a/about.html
+++ b/about.html
@@ -82,13 +82,13 @@
             <p>
               Hello there! My name is Mthabiseni Tsabedze and I am Swazi
               Front-End Developer. I am currently studying at an university.
-              i've also been studying a lot on my own to leaarn new technologies
+              I've also been studying a lot on my own to learn new technologies
               and skills.
               <br />
               <br />
               I started as a Front-End developer in 2021 then went on to learn
               React with SheCodes 2022. Since then i have been dedicating about
-              6hrs a day to studies. I see that i am on the right path because I
+              4hrs a day to studies. I see that i am on the right path because I
               see the results that the dedicates bours bring.
             </p>
             <a href="/work.html" class="btn btn-about mt-5">Veiw Projects →</a>
