--- a/index.html
+++ b/index.html
@@ -79,7 +79,8 @@
       <h2>Hello, I am</h2>
       <h1 class="display-3">Mthabiseni Tsabedze</h1>
       <p>Front-end developer based in Swaziland</p>
-      <a href="/contact.html" class="btn btn-branding mt-5">Contact me</a>
+      <a href="/contact.html" class="btn btn-branding my-5">Contact me</a>
+      <div class="banner"></div>
     </div>
     <div class="container">
       <div class="projects py-5">
