--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Work</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -132,8 +132,11 @@
                       <a href="#" class="nav-link" title="homepage">Home</a>
                     </li>
                     <li>
-                      <a href="#works" class="nav-link" title="Works section"
-                        >Works</a
+                      <a
+                        href="projects.html"
+                        class="nav-link"
+                        title="Works section"
+                        >Projects</a
                       >
                     </li>
                     <li>
@@ -142,7 +145,7 @@
                       >
                     </li>
                     <li>
-                      <a href="#contact" class="nav-link" title="Contact me"
+                      <a href="contact.html" class="nav-link" title="Contact me"
                         >Contact</a
                       >
                     </li>
