--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a class="nav-link" href="about.html">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="work.html">Work</a>
+              <a class="nav-link" href="projects.html">Projects</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="contact.html">Contact</a>
@@ -87,7 +87,7 @@
         <h4
           class="text-muted border-bottom border-info py-1 d-inline-block mb-5"
         >
-          Projects
+          <a href="">Projects</a>
         </h4>
         <!--make it responsive-->
         <div class="row">
