--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 
     <title>👩‍💻Portfolio: Front-End developer</title>
   </head>
+
   <body>
     <nav
       class="navbar navbar-expand-lg navbar-light fixed-top sticky nav-sticky"
@@ -82,6 +83,8 @@
       <a href="/contact.html" class="btn btn-branding my-5">Contact me</a>
       <div class="banner"></div>
     </div>
+
+    <!--main content-->
     <div class="container">
       <div class="projects py-5">
         <h4
@@ -89,7 +92,6 @@
         >
           <a href="">Projects</a>
         </h4>
-        <!--make it responsive-->
         <div class="row">
           <div class="col-md-6 text-center">
             <h2 class="sub-title mb-4 my-5">React Dictionary</h2>
@@ -118,6 +120,7 @@
         </div>
       </div>
     </div>
+
     <div class="container py-5">
       <div class="row">
         <div class="col-md-4">
@@ -231,6 +234,7 @@
         </div>
       </div>
     </div>
+
     <!--footer-->
     <footer>
       <div class="bg">
