changed the grid style and added project links

--- a/projects.html
+++ b/projects.html
@@ -76,12 +76,14 @@
       <div class="container p-3 mb-5 text-center">
         <div class="row row-cols-1 row-cols-md-2 g-4">
           <div class="col">
-            <div class="card shadow">
-              <img
-                src="images/React dictionary.JPG"
-                alt="weather image"
-                class="img-fluid d-none d-sm-flex"
-              />
+            <div
+              class="card col"
+              style="
+                width: 40rem;
+                background-position: left;
+                background-image: url(images/letter-bg.png);
+              "
+            >
               <div class="card-body">
                 <h2 class="sub-title mb-5">React Dictionary</h2>
                 <p>
@@ -91,8 +93,7 @@
                 </p>
                 <a
                   href="https://vocal-starship-ad8530.netlify.app/"
-                  target="_blank"
-                  class="btn btn-launch-outline"
+                  class="card-link"
                   ><i class="bi bi-box-arrow-up-right"></i
                 ></a>
                 <a
@@ -106,12 +107,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow">
-              <img
-                src="images/Weather-app.png"
-                alt="weather image"
-                class="img-fluid d-none d-sm-flex"
-              />
+            <div
+              class="card col"
+              style="width: 40rem; background-image: url(images/weather-bg.png)"
+            >
               <div class="card-body">
                 <h2 class="sub-title mb-5">Vanilla-Weather-App</h2>
                 <p>
@@ -121,7 +120,7 @@
                   forecast.
                 </p>
                 <a
-                  href="https://vocal-starship-ad8530.netlify.app/"
+                  href="https://tender-lewin-d1e81b.netlify.app"
                   target="_blank"
                   class="btn btn-launch-outline"
                   ><i class="bi bi-box-arrow-up-right"></i
@@ -137,42 +136,10 @@
             </div>
           </div>
           <div class="col">
-            <div class="card shadow">
-              <img
-                src="images/weather.PNG"
-                alt="weather image"
-                class="img-fluid d-none d-sm-flex"
-              />
-              <div class="card-body">
-                <h2 class="sub-title mb-5">Weather App</h2>
-                <p>
-                  The weather app also provides atmospheric pressure, weather
-                  conditions, relative humidity, dew point, wind speed, in
-                  addition to six days in future and hourly weather forecast.
-                </p>
-                <a
-                  href="https://vocal-starship-ad8530.netlify.app/"
-                  target="_blank"
-                  class="btn btn-launch-outline"
-                  ><i class="bi bi-box-arrow-up-right"></i
-                ></a>
-                <a
-                  href="https://github.com/MthabiKT/dictionary-project"
-                  target="_blank"
-                  class="btn btn-launch-outline"
-                >
-                  <i class="bi bi-github"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col">
-            <div class="card shadow">
-              <img
-                src="images/Coffee Shop.JPG"
-                alt="weather image"
-                class="img-fluid d-none d-sm-flex"
-              />
+            <div
+              class="card col"
+              style="width: 40rem; background-image: url(images/testiing.png)"
+            >
               <div class="card-body">
                 <h2 class="sub-title mb-5">Coffee Shop</h2>
                 <p class="">
@@ -184,6 +151,58 @@
                   href="https://vocal-starship-ad8530.netlify.app/"
                   target="_blank"
                   class="btn btn-launch-outline"
+                  ><i class="bi bi-box-arrow-up-right"></i
+                ></a>
+                <a
+                  href="https://github.com/MthabiKT/dictionary-project"
+                  target="_blank"
+                  class="btn btn-launch-outline"
+                >
+                  <i class="bi bi-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div
+              class="card col"
+              style="
+                width: 40rem;
+                background-position: left;
+                background-image: url(images/weather-bg.png);
+              "
+            >
+              <div class="card-body">
+                <h2 class="sub-title mb-5">Weather App</h2>
+                <p>
+                  The weather app also provides atmospheric pressure, weather
+                  conditions, relative humidity, dew point, wind speed, in
+                  addition to six days in future and hourly weather forecast.
+                </p>
+                <a
+                  href="https://nifty-volhard-4afc0a.netlify.app"
+                  target="_blank"
+                  class="btn btn-launch-outline"
+                  ><i class="bi bi-box-arrow-up-right"></i
+                ></a>
+                <a
+                  href="https://github.com/MthabiKT/dictionary-project"
+                  target="_blank"
+                  class="btn btn-launch-outline"
+                >
+                  <i class="bi bi-github"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card col" style="width: 40rem">
+              <div class="card-body">
+                <h2 class="sub-title mb-5">Hometown</h2>
+                <h3>COMING SOON</h3>
+                <a
+                  href="https://vocal-starship-ad8530.netlify.app/"
+                  class="card-link"
                   ><i class="bi bi-box-arrow-up-right"></i
                 ></a>
                 <a
