--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h4
           class="text-muted border-bottom border-info py-1 d-inline-block mb-5"
         >
-          <a href="">Projects</a>
+          <a href="projects.html">Projects</a>
         </h4>
         <div class="row">
           <div class="col-md-6 text-center">
