Added name initials

--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
       class="navbar navbar-expand-lg navbar-light fixed-top sticky nav-sticky"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Mthabi.T</a>
+        <a class="navbar-brand" href="#">Mthabi.KT</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -80,7 +80,7 @@
           <div class="col-md-6 p-5">
             <h2 class="mb-4">A Creative Designer from Swaziland</h2>
             <p>
-              Hello there! My name is Mthabiseni Tsabedze and I am Swazi
+              Hello there! My name is Mthabiseni K. Tsabedze and I am Swazi
               Front-End Developer. I am currently studying at an university.
               I've also been studying a lot on my own to learn new technologies
               and skills.
@@ -108,7 +108,7 @@
         <div class="container">
           <div class="row">
             <div class="col-md-6 footer-left">
-              <a href="#" class="logo" title="logo">Mthabiseni.Tsabedze </a>
+              <a href="#" class="logo" title="logo">Mthabiseni.K.Tsabedze </a>
               <div class="source-code d-none d-sm-block">
                 <p class="pt-5">
                   This code is
@@ -121,7 +121,7 @@
                     open-sourced</a
                   >
                 </p>
-                <p>© MthabiseniTsabedze 2022</p>
+                <p>© Mthabiseni.K.Tsabedze 2022</p>
               </div>
             </div>
             <div class="col-md-6 footer-right">
