--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       class="navbar navbar-expand-lg navbar-light fixed-top sticky nav-sticky"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Mthabi.T</a>
+        <a class="navbar-brand" href="#">Mthabi.KT</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -78,7 +78,7 @@
     </nav>
     <div class="hero">
       <h2>Hello, I am</h2>
-      <h1 class="display-3">Mthabiseni Tsabedze</h1>
+      <h1 class="display-3">Mthabiseni K. Tsabedze</h1>
       <p>Front-end developer based in Swaziland</p>
       <a href="/contact.html" class="btn btn-branding my-5">Contact me</a>
       <div class="banner"></div>
@@ -334,7 +334,7 @@
                     open-sourced</a
                   >
                 </p>
-                <p>© MthabiseniTsabedze 2022</p>
+                <p>© Mthabiseni.K.Tsabedze 2022</p>
               </div>
             </div>
           </div>
