--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
       class="navbar navbar-expand-lg navbar-light fixed-top sticky nav-sticky"
     >
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Mthabi.T</a>
+        <a class="navbar-brand" href="#">Mthabi.KT</a>
         <button
           class="navbar-toggler"
           type="button"
