--- a/projects.html
+++ b/projects.html
@@ -74,12 +74,11 @@
     <h2 class="display-5 text-center mt-5 py-5">My Projects</h2>
     <div class="background-image">
       <div class="container p-3 mb-5 text-center">
-        <div class="row row-cols-1 row-cols-md-2 g-4">
-          <div class="col">
+        <div class="row">
+          <div class="col-md-6">
             <div
-              class="card col"
+              class="card"
               style="
-                width: 40rem;
                 background-position: left;
                 background-image: url(images/letter-bg.png);
               "
@@ -106,10 +105,10 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-md-6">
             <div
-              class="card col"
-              style="width: 40rem; background-image: url(images/weather-bg.png)"
+              class="card"
+              style="background-image: url(images/weather-bg.png)"
             >
               <div class="card-body">
                 <h2 class="sub-title mb-5">Vanilla-Weather-App</h2>
@@ -135,10 +134,10 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-md-6">
             <div
-              class="card col"
-              style="width: 40rem; background-image: url(images/testiing.png)"
+              class="card"
+              style="background-image: url(images/testiing.png)"
             >
               <div class="card-body">
                 <h2 class="sub-title mb-5">Coffee Shop</h2>
@@ -163,11 +162,10 @@
               </div>
             </div>
           </div>
-          <div class="col">
+          <div class="col-md-6">
             <div
-              class="card col"
+              class="card"
               style="
-                width: 40rem;
                 background-position: left;
                 background-image: url(images/weather-bg.png);
               "
@@ -195,8 +193,8 @@
               </div>
             </div>
           </div>
-          <div class="col">
-            <div class="card col" style="width: 40rem">
+          <div class="col-md-6">
+            <div class="card">
               <div class="card-body">
                 <h2 class="sub-title mb-5">Hometown</h2>
                 <h3>COMING SOON</h3>
@@ -218,6 +216,7 @@
         </div>
       </div>
     </div>
+    <!--footer-->
     <footer>
       <div class="bg">
         <div class="container">
