--- a/projects.html
+++ b/projects.html
@@ -77,7 +77,7 @@
         <div class="row">
           <div class="col-md-6">
             <div
-              class="card"
+              class="card m-3"
               style="
                 background-position: left;
                 background-image: url(images/letter-bg.png);
@@ -107,7 +107,7 @@
           </div>
           <div class="col-md-6">
             <div
-              class="card"
+              class="card m-3"
               style="background-image: url(images/weather-bg.png)"
             >
               <div class="card-body">
@@ -136,35 +136,7 @@
           </div>
           <div class="col-md-6">
             <div
-              class="card"
-              style="background-image: url(images/testiing.png)"
-            >
-              <div class="card-body">
-                <h2 class="sub-title mb-5">Coffee Shop</h2>
-                <p class="">
-                  My first project built with HTML, CSS and JavaScript. I
-                  enrolled coding classes from SheCodes Here is where my coding
-                  journey began.
-                </p>
-                <a
-                  href="https://vocal-starship-ad8530.netlify.app/"
-                  target="_blank"
-                  class="btn btn-launch-outline"
-                  ><i class="bi bi-box-arrow-up-right"></i
-                ></a>
-                <a
-                  href="https://github.com/MthabiKT/dictionary-project"
-                  target="_blank"
-                  class="btn btn-launch-outline"
-                >
-                  <i class="bi bi-github"></i>
-                </a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6">
-            <div
-              class="card"
+              class="card m-3"
               style="
                 background-position: left;
                 background-image: url(images/weather-bg.png);
@@ -194,7 +166,7 @@
             </div>
           </div>
           <div class="col-md-6">
-            <div class="card">
+            <div class="card m-3">
               <div class="card-body">
                 <h2 class="sub-title mb-5">Hometown</h2>
                 <h3>COMING SOON</h3>
